tests/NormalTests/paczka1/small_fuzzy/35737437.err
Error in line 7: U3X57hSnVmC A425 74,6
Error in line 6: RkI A303 36,9
Error in line 8: U3X57hSnVmC A303 5,0
